fixed error in line endings

--- a/doc/bmc_article.tex
+++ b/doc/bmc_article.tex
@@ -146,8 +146,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \address{%
-    \iid(1)University of Gothenburg, Gothenburg, Sweden\\
-    \iid(2)Naturalis Biodiversity Center, Leiden, the Netherlands\\
+    \iid(1)University of Gothenburg, Gothenburg, Sweden
+    \iid(2)Naturalis Biodiversity Center, Leiden, the Netherlands
 }%
 
 \maketitle
